# sekrd-mcp

./: README.md  pyproject.toml  server.py
