[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sekrd-mcp"
version = "0.1.0"
description = "MCP server for Sekrd — security scanning from AI IDEs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
sekrd-mcp = "server:mcp.run"

[project.urls]
Homepage = "https://sekrd.com"
Repository = "https://github.com/sekrdcom/sekrd-mcp"
